...
                NumberPadTextField(
                    viewModel = amountInputViewModel,
                    showEditButton = !keyboardVisible,
                    onClick = onClickBalance,
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("ReceiveNumberPadTextField")
                )

                // Animated visibility for keyboard section
                AnimatedVisibility(
                    visible = keyboardVisible,
                    enter = slideInVertically(
...
                    exit = slideOutVertically(
                        targetOffsetY = { fullHeight -> fullHeight },
                        animationSpec = tween()
                    ) + fadeOut()
                ) {
                    Column(
                        modifier = Modifier.testTag("ReceiveNumberPad")
                    ) {
                        FillHeight(min = 12.dp)

                        Row(
                            verticalAlignment = Alignment.CenterVertically,
                            horizontalArrangement = Arrangement.End,
...
                                .testTag("ReceiveNumberField")
                        )

                        PrimaryButton(
                            text = stringResource(R.string.common__continue),
                            onClick = onContinueKeyboard,
                            modifier = Modifier.testTag("ReceiveNumberPadSubmit")
                        )

                        VerticalSpacer(16.dp)
                    }
                }

...

                        if (showPaymentRequestButton) {
                            SecondaryButton(
                                text = stringResource(R.string.wallet__payment_request_send),
                                onClick = onClickPaymentRequest,
                                enabled = amountInputUiState.sats > 0,
                                modifier = Modifier.testTag("PaymentRequestSendButton"),
                            )
                            VerticalSpacer(12.dp)
                        }

                        PrimaryButton(
                            text = stringResource(R.string.wallet__receive_show_qr),
...
