...
    <string name="common__later">Later</string>
    <string name="common__learn_more">Learn More</string>
    <string name="common__max">Max</string>
    <string name="common__min">Min</string>
    <string name="common__never">Never</string>
    <string name="common__no">No</string>
    <string name="common__ok">OK</string>
    <string name="common__ok_random">Awesome!\nNice!\nCool!\nGreat!\nFantastic!\nSweet!\nExcellent!\nTerrific!</string>
    <string name="common__preview">Preview</string>
    <string name="common__ready">Ready</string>
    <string name="common__remove">Remove</string>
    <string name="common__remove_tag">Remove %1$s tag</string>
    <string name="common__reset">Reset</string>
...
    <string name="settings__adv__reset_desc">Are you sure you want to reset the suggestions? They will reappear in case you have removed them.</string>
    <string name="settings__adv__reset_title">Reset Suggestions?</string>
    <string name="settings__adv__rgs_server">Rapid-Gossip-Sync</string>
    <string name="settings__adv__section_debug">Debug</string>
    <string name="settings__adv__section_networks">Networks</string>
    <string name="settings__adv__section_other">Other</string>
    <string name="settings__adv__section_payments">Payments</string>
    <string name="settings__adv__suggestions_reset">Reset Suggestions</string>
    <string name="settings__advanced_title">Advanced</string>
    <string name="settings__backup__category_connection_receipts">Connection Receipts</string>
    <string name="settings__backup__category_connections">Connections</string>
    <string name="settings__backup__category_contacts">Contacts</string>
    <string name="settings__backup__category_profile">Profile</string>
...
    <string name="wallet__payment_request_enter_pubky">Enter pubky</string>
    <string name="wallet__payment_request_expired">The payment request has expired.</string>
    <string name="wallet__payment_request_expires">Expires in</string>
    <string name="wallet__payment_request_expiry_day">1 day</string>
    <string name="wallet__payment_request_expiry_hour">1 hour</string>
    <string name="wallet__payment_request_expiry_month">1 month</string>
    <string name="wallet__payment_request_expiry_week">1 week</string>
    <string name="wallet__payment_request_for">For</string>
    <string name="wallet__payment_request_mismatch">The payment details did not match the request. Payment cancelled.</string>
    <string name="wallet__payment_request_not_specified">Not specified</string>
    <string name="wallet__payment_request_note">Note</string>
    <string name="wallet__payment_request_note_placeholder">What is this payment for?</string>
    <string name="wallet__payment_request_or_pay">Request Or Pay</string>
...
