...
        HorizontalDivider()
        FullWidthTextButton(
            enabled = inputText.isNotEmpty(),
            horizontalArrangement = Arrangement.Center,
            onClick = { viewModel?.onSendManually(inputText) }
        ) {
            Text("Continue")
        }
    }
}

@Preview(showBackground = true)
@Composable
...
