...
                    )
                    SecondaryButton(
                        text = stringResource(R.string.onboarding__skip_intro),
                        onClick = onSkipClick,
                        modifier = Modifier
                            .weight(1f)
                            .testTag("SkipIntro")
                    )
                }
            }
        }
    }
}
...
