...
        ) {
            PrimaryButton(
                text = stringResource(R.string.onboarding__new_wallet),
                onClick = onCreateClick,
                modifier = Modifier
                    .weight(1f)
                    .testTag("NewWallet")
            )
            SecondaryButton(
                text = stringResource(R.string.onboarding__restore),
                onClick = onRestoreClick,
                modifier = Modifier
                    .weight(1f)
...
